# test-2

./: .gitignore  readme.md
telegram-be/: .env.example  LICENSE  main.py  pyproject.toml
telegram-be/db/: supabase_migration.sql
telegram-be/docs/: API_DOCS.md  DEPLOYMENT.md  INSTALLATION.md  QUICKSTART.md  USER_MANUAL.md
telegram-be/helper/: generate_key.py  start.sh  test_config.py
telegram-be/src/api/: health.py  routes.py  test.py  websocket.py
telegram-be/src/config/: __init__.py  config.py  encryption.py
telegram-be/src/database/: __init__.py  core.py  crud.py  schema.py  supabase_client.py
telegram-be/src/middleware/: auth.py
telegram-be/src/services/: __init__.py  agent.py  messaging.py
telegram-be/src/telegram/: __init__.py  manager.py
telegram-be/src/utils/: priority_detector.py
telegram-be/static/: index.html
telegram-be/static/css/: styles.css
telegram-be/static/js/: api.js  kanban.js  main.js  socket.js  state.js  ui.js  utils.js
